<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhrasePad</string>
    <string name="phrases">Phrases</string>
    <string name="search">Search</string>
    <string name="quiz">Quizzes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_phrase">Add Phrase</string>
    <string name="add_phrase_title">Add new phrase</string>
    <string name="save">Save</string>
    <string name="phrase_entry_error">Enter a phrase</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="finish">Finish</string>
    <string name="deleted">\"%1$s\" deleted</string>

    <!-- Notifications -->
    <string name="notification_title">Quiz time!</string>
    <string name="notification_content">Take your daily phrase quiz now</string>

    <!-- Set language sheet -->
    <string name="set_language_header">Set language</string>
    <string name="set_language_message">To begin using PhrasePad, set your source and destination languages. You can change these at any time in Settings.</string>
    <string name="set_language_error">Select a language</string>
    <string name="set_sample">Sample PhrasePad</string>
    <string name="set_sample_dialog_title">Use sample database and phrases?</string>
    <string name="set_sample_dialog_message">You can start PhrasePad with a pre-defined set of phrases between English and Welsh.\n\nThis is a great way to demo functionality without needing to input data. Refresh the list to view the sample phrases.</string>

    <!-- Quizzes -->
    <string name="start_quiz">Start quiz</string>
    <string name="end_quiz">End quiz</string>
    <string name="quiz_incorrect">Incorrect answer :(</string>
    <string name="quiz_exit_early">Exit quiz?</string>
    <string name="quiz_your_score">Your score is: %1$d</string>
    <string name="start_quiz_error_title">No phrases!</string>
    <string name="start_quiz_error_message">You need to add some phrases in order to take a quiz.</string>
    <string name="quiz_complete_title">Quiz complete!</string>
    <string name="quiz_complete_message">Your score was %1$d out of %2$d</string>

    <!-- Preference Titles -->
    <string name="languages_header">Languages</string>
    <string name="notifications_header">Learning notifications</string>
    <string name="display_header">Display</string>
    <string name="data_manage_header">Data management</string>

    <!-- Languages Preferences -->
    <string name="source_language">Source language</string>
    <string name="destination_language">Destination language</string>
    <string name="language_changed_header">Language pair changed</string>
    <string name="language_changed_message">You can save the phrases in your PhraseBook for later, just reselect the language pair. Or you can clear your PhraseBook and start again.</string>
    <string name="language_changed_delete">Delete</string>
    <string name="language_changed_cleared">Phrase book cleared</string>

    <!-- Notifications Preferences -->
    <string name="notifications">Send daily quiz notifications</string>
    <string name="notifications_summary">Remind you to do a quiz every day at noon</string>

    <!-- Display Preferences -->
    <string name="always_dev_lang">Always use device language</string>
    <string name="always_dev_lang_summary">Use your device language for all language names, instead of their native names</string>
    <string name="theme">App theme</string>
    <string name="theme_sys_default">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- Data Management Preferences -->
    <string name="clear_all">Reset PhrasePad</string>
    <string name="clear_all_summary">This will clear all phrase books. All saved phrases will be deleted!</string>
    <string name="clear_all_dialog_message">All saved phrases will be deleted and settings will be reset to default.\n\nThis cannot be undone! The app will close to complete the reset.</string>
</resources>